# ovum_exporter

./: .dockerignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: docker-image.yml
src/ovum_exporter/: constants.py  main.py  modbus.py  ovum.py  read_exporter_values.py  utils.py
